<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#51FBFBFB"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/peopleSplit"
        android:layout_width="159dp"
        android:layout_height="31dp"
        android:layout_marginStart="140dp"
        android:background="#16682F2F"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="serif"
        android:text="@string/total_split"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/totalPeople"
        android:layout_width="77dp"
        android:layout_height="48dp"
        android:layout_marginStart="37dp"
        android:background="#7A98FB98"
        android:elegantTextHeight="false"
        android:ems="10"
        android:hint="@string/enter"
        android:inputType="number"
        android:selectAllOnFocus="false"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView13"
        app:layout_constraintStart_toEndOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="serif"
        android:text="@string/total_people"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="serif"
        android:text="@string/total_with_tip"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalAmount"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="159dp"
        android:layout_height="31dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="40dp"
        android:background="#16682F2F"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipAmount" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:fontFamily="serif"
        android:text="@string/tip_amount"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="196dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:elegantTextHeight="true"
        android:fontFamily="serif"
        android:text="@string/bill_total_with_tax"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberDecimal"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="116dp"
        android:layout_height="49dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="15dp"
        android:background="#7A98FB98"
        android:elegantTextHeight="false"
        android:ems="10"
        android:hint="@string/enter"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="false"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="serif"
        android:text="@string/tip_percent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="326dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/twelveOption"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="OnTipChange"
            android:text="@string/_12" />

        <RadioButton
            android:id="@+id/fifteenOption"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="OnTipChange"
            android:text="@string/_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/eighteenOption"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:onClick="OnTipChange"
            android:text="@string/_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/twentyOption"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:onClick="OnTipChange"
            android:text="@string/_20" />

    </RadioGroup>

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="159dp"
        android:layout_height="31dp"
        android:layout_marginStart="140dp"
        android:background="#16682F2F"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/GoBtn"
        android:layout_width="70dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#BC42B34D"
        android:onClick="GoButtonClick"
        android:text="@string/go"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalPeople"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toEndOf="@+id/totalPeople" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#BC42B34D"
        android:onClick="clearBtnClick"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peopleSplit" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/totalPeople"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

</androidx.constraintlayout.widget.ConstraintLayout>